deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqlite
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sqlite
  template:
    metadata:
      labels:
        app: sqlite
    spec:
      containers:
        - name: sqlite
          image: docker.io/keanuwatts/theclusterflux:sqlite
          imagePullPolicy: Always
          volumeMounts:
            - name: sqlite-storage
              mountPath: /app/data  
      imagePullSecrets:
        - name: dockerhub-secret
      volumes:
        - name: sqlite-storage
          persistentVolumeClaim:
            claimName: sqlite-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: sqlite
spec:
  selector:
    app: sqlite
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sqlite
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - sqlite.theclusterflux.com
    secretName: theclusterflux
  rules:
  - host: sqlite.theclusterflux.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sqlite
            port:
              number: 8080
